# texed

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  package.bat  project.4coder
.github/workflows/: deploy.yml
art/: alpha_masked_blending.ecotex  ash.ecotex  asphalt.ecotex  blur.ecotex  demo.ecotex  demo2.ecotex  dirt.ecotex  grass.ecotex  islands.ecotex  lava.ecotex  lightbleed_test.ecotex  lines.ecotex  raytest.ecotex  road.ecotex  rock.ecotex  tile.ecotex  zpl.ecotex
cmake/: FindRaylib.cmake  utils.cmake
code/app/: CMakeLists.txt  platform.c  raylib_helpers.h  system.h  texed.c  texed.h  texed_helpers.c  texed_img.c  texed_ops.c  texed_ops_helpers.c  texed_ops_ids.h  texed_ops_list.c  texed_ops_mgr.c  texed_params.h  texed_prj.c  texed_widgets.c
code/vendors/: CMakeLists.txt  gui_file_dialog.h  gui_textbox_extended.h  raygui.h  zpl.h
code/vendors/cwpack/: CMakeLists.txt
